// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly with an image lead asset 1`] = `
<style>
.IS1 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS2 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS3 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS4 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS5 {
  margin: 0;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <figure
    className="IS5"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n IS3"
      >
        <div
          className="IS2"
        >
          <img
            alt="Chris Reynolds Gordon at one of his party venues in London"
            className="IS1"
            src="https://crop169.io/?resize=1200"
            srcSet="https://crop169.io/?resize=320 320w, https://crop169.io/?resize=685 685w, https://crop169.io/?resize=1200 1200w"
          />
        </div>
      </div>
    </div>
    <figcaption>
      <div
        className="css-text-901oao"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="css-text-901oao"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`2. renders correctly with a video lead asset 1`] = `
<style>
.IS1 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS2 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS3 {
  margin: 0;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <figure
    className="IS3"
  >
    <div
      className="css-view-1dbjc4n IS2"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <Video
          accountId="1234"
          height="100%"
          id="aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee"
          is360={false}
          playerId="3456"
          policyKey="policyKey"
          position="absolute"
          poster={
            Object {
              "uri": "https://crop169.io/",
            }
          }
          videoId="5678"
          width="100%"
        />
      </div>
    </div>
    <figcaption>
      <div
        className="css-text-901oao"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="css-text-901oao"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`3. renders correctly when there is no lead asset 1`] = `null`;

exports[`4. correctly renders when there is no displayimage 1`] = `null`;

exports[`5. it renders correctly with a classname 1`] = `
<style>
.IS1 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS2 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS3 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS4 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS5 {
  margin: 0;
}
</style>

<div
  className="test-class-name test-class-name css-view-1dbjc4n"
>
  <figure
    className="IS5"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n IS3"
      >
        <div
          className="IS2"
        >
          <img
            alt="Chris Reynolds Gordon at one of his party venues in London"
            className="IS1"
            src="https://crop169.io/?resize=1200"
            srcSet="https://crop169.io/?resize=320 320w, https://crop169.io/?resize=685 685w, https://crop169.io/?resize=1200 1200w"
          />
        </div>
      </div>
    </div>
    <figcaption>
      <div
        className="css-text-901oao"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="css-text-901oao"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;
